# spectrostaff

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst  modules.rst  spectrostaff.rst
docs/source/_static/: custom.css
src/spectrostaff/: broadcasting.py  data.py  gui.py  main.py  netcom.py  recorder.py
test/: test_broadcasting.py  test_data.py  test_gui.py  test_recorder.py
