[tool.poetry]
name = "spectrostaff"
version = "0.1.0"
description = "A real-time audio-to-staff visualization"
authors = ["Tyler Evans"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pyqtgraph = "^0.13.3"
pyqt6 = "^6.6.0"
pyaudio = "^0.2.14"
scipy = "^1.11.4"
poetry-plugin-export = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"
types-pyaudio = "^0.2.16.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
